Update specific assets
- use basenames to infer specific targets need updating (can be noisy but better than reloading all of them)
- support srcset swapping
- reconnect socket on server restart
- pass server errors to console

--- a/inst/middleware/injection.html
+++ b/inst/middleware/injection.html
@@ -7,7 +7,7 @@
         }
 
         document.currentScript.id = "hotwater-reloader"
-        document.body.appendChild(document.currentScript)
+        document.head.appendChild(document.currentScript)
 
         function stripTrailingNulls(u8) {
             let end = u8.length;
@@ -21,23 +21,65 @@
             return u.toString();
         }
 
-        function reloadCSS() {
+        function reloadCSS(targets) {
             document.querySelectorAll('link[rel="stylesheet"]').forEach((link) => {
                 const href = link.getAttribute('href');
                 if (!href) return;
+
+                if (!targets.includes(basename(href))) return;
+
                 const next = link.cloneNode(true);
                 next.href = newlink(href);
                 next.addEventListener('load', () => link.remove(), { once: true });
+
+                next.addEventListener('error', () => {
+                    next.remove();
+                    console.warn("hotwater: CSS swap failed (missing file?):", href);
+                }, { once: true });
+
                 link.parentNode.insertBefore(next, link.nextSibling);
             });
         }
 
-        function reloadImages() {
+        function reloadImages(targets) {
+            const rewriteSrcset = (srcset, targets) => {
+                return srcset
+                    .split(',')
+                    .map(e => {
+                        const parts = e.trim().split(/\s+/);
+                        const url = parts[0];
+                        const desc = parts.slice(1).join(' ');
+
+                        if (targets.includes(basename(url))) {
+                            const next = newlink(url);
+                            return desc ? `${next} ${desc}` : next;
+                        }
+                        return e.trim();
+                    })
+                    .join(', ')
+            };
+
+
             document.querySelectorAll('img').forEach((img) => {
                 const src = img.getAttribute('src');
+                const srcset = img.getAttribute('srcset');
+
+                if (srcset) {
+                    img.setAttribute('srcset', rewriteSrcset(srcset, targets));
+                    return;
+                }
+
                 if (!src) return;
+                if (!targets.includes(basename(src))) return;
                 if (/^(data:|blob:)/i.test(src)) return;
+
                 img.src = newlink(src);
+            });
+
+            document.querySelectorAll('picture source[srcset]').forEach(el => {
+                const srcset = el.getAttribute('srcset');
+                if (!srcset) return;
+                el.setAttribute('srcset', rewriteSrcset(srcset, targets));
             });
         }
 
@@ -49,49 +91,89 @@
             }
         }
 
-        let ws = new WebSocket('%s', ['pub.sp.nanomsg.org']);
-        ws.binaryType = "arraybuffer";
 
-        ws.onmessage = async (ev) => {
-            try {
-                let data = ev.data;
-                if (data instanceof Blob) data = await data.arrayBuffer();
+        let ws = null;
+        let everConnected = false;
 
-                const u8 = stripTrailingNulls(new Uint8Array(data));
-                const text = new TextDecoder("utf-8").decode(u8);
-                const msg = JSON.parse(text);
 
-                switch (msg.type) {
-                    case "HW::resource": {
-
-                        const targets = msg.targets.map((v) => {
-                            return basename(v);
-                        });
-                        const exts = targets.map((v) => {
-                            return v.split('.').pop();
-                        });
-
-                        const unique_exts = [...new Set(exts)];
-
-                        if (unique_exts.includes("css")) {
-                            reloadCSS();
-                        }
-
-                        if (!unique_exts.every(ext => ext === "css")) {
-                            reloadImages();
-                        }
-
-                        break;
-                    }
-                    case "HW::page": {
-                        window.location.reload();
-                        break;
-                    }
-                    default: throw new Error(`Unknown payload ${msg.type}`)
-                }
-            } catch (error) {
-                console.log(error);
+        function startSocket() {
+            if (ws && (ws.readyState === WebSocket.OPEN || ws.readyState === WebSocket.CONNECTING)) {
+                return;
             }
-        };
+
+            ws = new WebSocket('%s', ['pub.sp.nanomsg.org']);
+            ws.binaryType = "arraybuffer";
+
+            ws.onopen = () => {
+                if (everConnected) {
+                    window.location.reload();
+                }
+                everConnected = true;
+            };
+
+            ws.onmessage = async (ev) => {
+                try {
+                    let data = ev.data;
+                    if (data instanceof Blob) data = await data.arrayBuffer();
+
+                    const u8 = stripTrailingNulls(new Uint8Array(data));
+                    const text = new TextDecoder("utf-8").decode(u8);
+                    const msg = JSON.parse(text);
+
+                    switch (msg.type) {
+                        case "HW::resource": {
+
+                            const targets = msg.targets.map((v) => {
+                                return basename(v);
+                            });
+                            const exts = targets.map((v) => {
+                                return v.split('.').pop();
+                            });
+
+                            const unique_exts = [...new Set(exts)];
+
+                            if (unique_exts.includes("css")) {
+                                const css_targets = targets.filter((v) => {
+                                    return v.includes(".css");
+                                });
+                                reloadCSS(css_targets);
+                            }
+
+                            if (!unique_exts.every(ext => ext === "css")) {
+                                const asset_targets = targets.filter((v) => {
+                                    return !v.includes(".css");
+                                });
+                                reloadImages(asset_targets);
+                            }
+
+                            break;
+                        }
+                        case "HW::page": {
+                            window.location.reload();
+                            break;
+                        }
+                        case "HW::error": {
+                            console.warn(`hotwater: ${msg.error}`);
+                            break;
+                        }
+                        default: throw new Error(`Unknown payload ${msg.type}`)
+                    }
+                } catch (error) {
+                    console.log(error);
+                }
+            };
+
+            ws.onclose = (ev) =>  {
+                ws = null;
+                setTimeout(startSocket, 5000);
+            }
+
+            ws.onerror = () => {
+                console.warn("hotwater: error");
+            }
+        }
+
+
+        startSocket();
     })();
 </script>
